--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js",
-    "build":"npm install && npm install --prefix ../frontend && npm run build"
+    "start": "nodemon index.js"
   },
   "author": "ibrahim",
   "license": "ISC",
